--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body{
 }
 
 h6 {
-    font-family: 'Nunito:800', sans-serif;
+    font-family: 'Nunito:700', sans-serif;
 }
 
 /* datepicker and timepicker style adjustments */
@@ -51,12 +51,14 @@ h5 {
 }
 
 /* event card styling items */
-.card .card-title {
-    font-size: 22px;
+.card .card-image .card-title {
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .card.small .card-image {
-    max-height: 40%
+    height: 40%
 }
 
 .card .card-content {
