--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,11 @@ body{
     width: 70%;
 }
 
+#mapArea {
+    height: 500px;
+    width: 100%;
+}
+
 h6 {
     font-family: 'Nunito:700', sans-serif;
 }
